--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -22,8 +22,6 @@
                 <p class="text-sm 2xl:text-base font-normal text-crater-brown">
                     Interactúa con el asistente virtual para resolver dudas y acceder a información.
                 </p>
-                <button
-                    class="bg-golden-glow px-4 py-2 rounded-md font-bold mt-4 text-crater-brown text-lg">Chatbot</button>
             </div>
         </div>
         <div class="flex flex-col gap-4 h-full w-full">
@@ -34,8 +32,9 @@
                     [textColor]="'text-crater-brown'"
                     [description]="'Sube facturas de manera manual o mediante archivos. Consulta, edita detalles, elimina registros y utiliza filtros.'"
                     [firstButtonBackgroundColor]="'bg-crater-brown'" [firstButtonTextColor]="'text-bisque'"
-                    [firtButtonText]="'Cargar'" [secondButtonBackgroundColor]="'bg-bisque'"
-                    [secondButtonTextColor]="'text-crater-brown'" [secondButtonText]="'Gestionar'" />
+                    [firtButtonText]="'Cargar'" [firstButtonRoute]="'upload-invoices'"
+                    [secondButtonBackgroundColor]="'bg-bisque'" [secondButtonTextColor]="'text-crater-brown'"
+                    [secondButtonRoute]="'invoice'" [secondButtonText]="'Gestionar'" />
 
                 } @else {
                 <app-card [icons]="['group']" [iconsColor]="'text-crater-brown'" [backgroundColor]="'bg-golden-glow'"
@@ -51,15 +50,12 @@
                     [textColor]="'text-bisque'"
                     [description]="'Genera proyecciones basadas en tus facturas, guarda tus simulaciones y accede fácilmente. Consulta o elimina simulaciones.'"
                     [firstButtonBackgroundColor]="'bg-golden-glow'" [firstButtonTextColor]="'text-crater-brown'"
-                    [firtButtonText]="'Crear'" [secondButtonBackgroundColor]="'bg-bisque'"
-                    [secondButtonTextColor]="'text-crater-brown'" [secondButtonText]="'Gestionar'" />
+                    [firtButtonText]="'Crear'" [firstButtonRoute]="'create-simulation'" />
                 } @else {
                 <app-card [icons]="['edit_notifications']" [iconsColor]="'text-bisque'"
                     [backgroundColor]="'bg-crater-brown'" [title]="'NOTIFICA A TUS USUARIOS.'"
                     [textColor]="'text-bisque'"
-                    [description]="'Envía alertas, recordatorios o mensajes importantes de forma rápida y sencilla.'"
-                    [firstButtonBackgroundColor]="'bg-golden-glow'" [firstButtonTextColor]="'text-crater-brown'"
-                    [firtButtonText]="'Notificaciones'" />
+                    [description]="'Envía alertas, recordatorios o mensajes importantes de forma rápida y sencilla.'" />
                 }
 
             </div>
@@ -67,16 +63,11 @@
             <app-card [icons]="['bar_chart', 'target']" [iconsColor]="'text-bisque'" [backgroundColor]="'bg-flamenco'"
                 [title]="'ACCEDE A INFORMACION VISUAL DE TUS FINANZAS Y ESTABLECE METAS.'"
                 [textColor]="'text-crater-brown'"
-                [description]="'Visualiza tus ingresos y egresos mensuales, flujo de caja, distribución de egresos por categoría y otros indicadores clave. Además, crea metas personalizadas basadas en tu historial para mejorar tu salud financiera.'"
-                [firstButtonBackgroundColor]="'bg-bisque'" [firstButtonTextColor]="'text-crater-brown'"
-                [firtButtonText]="'Reportes'" [secondButtonBackgroundColor]="'bg-golden-glow'"
-                [secondButtonTextColor]="'text-crater-brown'" [secondButtonText]="'Metas'" />
+                [description]="'Visualiza tus ingresos y egresos mensuales, flujo de caja, distribución de egresos por categoría y otros indicadores clave. Además, crea metas personalizadas basadas en tu historial para mejorar tu salud financiera.'" />
             } @else {
             <app-card [icons]="['bar_chart_4_bars']" [iconsColor]="'text-bisque'" [backgroundColor]="'bg-flamenco'"
                 [title]="'VISUALIZA REPORTES DEL SISTEMA CON DATOS CLAVE.'" [textColor]="'text-crater-brown'"
-                [description]="'Consulta gráficos detallados sobre usuarios registrados, estado de cuentas, evolución mensual de ingresos y egresos, balance neto por usuario, total de facturas procesadas, proporción entre ingresos y egresos, así como rankings de usuarios según actividad e ingresos generados.'"
-                [firstButtonBackgroundColor]="'bg-bisque'" [firstButtonTextColor]="'text-crater-brown'"
-                [firtButtonText]="'Reportes'" />
+                [description]="'Consulta gráficos detallados sobre usuarios registrados, estado de cuentas, evolución mensual de ingresos y egresos, balance neto por usuario, total de facturas procesadas, proporción entre ingresos y egresos, así como rankings de usuarios según actividad e ingresos generados.'" />
             }
         </div>
     </div>
