--- a/src/app/pages/upload-invoices/upload-invoices.component.html
+++ b/src/app/pages/upload-invoices/upload-invoices.component.html
@@ -18,7 +18,7 @@
             [ngClass]="hideImportInvoicesVar ? '' : 'max-w-4xl'">
             <app-manual-invoices-form [invoiceForm]="invoiceForm" [detailForm]="detailForm"
                 [responseScan]="combinedResponse" (callResetScanMethod)="resetScanResponse()"
-                (callSavedMethod)="saveInvoice($event)" />
+                (callSavedMethod)="saveInvoice($event)" (callCancelMethod)="callCancel()" />
         </div>
 
         @if(hideImportInvoicesVar) {
