--- a/src/app/components/invoice-list/invoice-list.component.html
+++ b/src/app/components/invoice-list/invoice-list.component.html
@@ -5,7 +5,7 @@
                 <th class="p-3">ID</th>
                 <th class="p-3">Consecutivo</th>
                 <th class="p-3">Fecha</th>
-                <th class="p-3">Cliente</th>
+                <th class="p-3">Proveedor</th>
                 <th class="p-3">Total</th>
                 <th class="p-3">Correo Electrónico</th>
                 <th class="p-3">Acciones</th>
@@ -17,24 +17,19 @@
                 <td class="p-3">{{item.id || 'N/A'}}</td>
                 <td class="p-3">{{item.consecutive || 'N/A'}}</td>
                 <td class="p-3">{{item.issueDate | date: 'dd/MM/yyyy'}}</td>
-                <td class="p-3">{{item.receiver?.name || 'N/A'}}</td>
+                <td class="p-3">{{item.issuer?.name || 'N/A'}}</td>
                 <td class="p-3">{{calculateTotal(item.details) | currency}}</td>
-                <td class="p-3">{{item.receiver?.email}}</td>
-                <td class="p-3 space-x-1">
-                   <button (click)="callModalAction.emit(item)" class="bg-flamenco px-2 p-0.5 rounded-md"
+                <td class="p-3">{{item.issuer?.email}}</td>
+                <td class="p-3 space-x-1 flex flex-row">
+                    <button (click)="callModalAction.emit(item)" class="bg-flamenco px-2 p-0.5 rounded-md"
                         type="button">
                         <span class="material-symbols-rounded text-lg text-bisque">edit</span>
                     </button>
-                      <!--
-                    <button (click)="openModal(item)" class="bg-golden-glow px-2 p-0.5 rounded-md" type="button">
-                        <span class="material-symbols-rounded text-lg text-crater-brown">delete</span>
-                    </button>-->
                     <a [routerLink]="['/app/invoice-detail', item.id]"
                         class="bg-flamenco px-2 p-0.5 rounded-md flex items-center ml-2" type="button">
                         <span class="material-symbols-rounded text-lg text-bisque">visibility</span>
                         <span class="text-bisque text-sm font-medium ml-2">Ver</span>
                     </a>
-
                 </td>
             </tr>
             } @empty {
