--- a/src/app/components/user/user-list/user-list.component.html
+++ b/src/app/components/user/user-list/user-list.component.html
@@ -24,14 +24,16 @@
         <td class="p-3" scope="row">{{item.birthDate | date: 'dd/MM/yyyy'}}</td>
         <td class="p-3" scope="row">{{item.email}}</td>
         <th class="p-3" scope="col">{{(item.status ? "Activo" : "Bloqueado")}}</th>
-        <td class="p-3 space-x-1">
-          <button (click)="callModalAction.emit(item);" class="bg-flamenco px-2 p-0.5 rounded-md" type="button">
-            <span class="material-symbols-rounded text-lg text-bisque">
+        <td class="p-3 space-x-1 flex items-center">
+          <button (click)="callModalAction.emit(item);"
+            class="group bg-flamenco px-2 p-0.5 rounded-md hover:bg-golden-glow" type="button">
+            <span class="material-symbols-rounded text-lg text-bisque group-hover:text-flamenco">
               edit
             </span>
           </button>
           <button (click)="openModal(item)" [disabled]="(item.id == idUser)"
-            class="bg-golden-glow px-2 p-0.5 rounded-md disabled:opacity-80 disabled:cursor-not-allowed" type="button">
+            class="group bg-golden-glow px-2 p-0.5 rounded-md disabled:opacity-80 disabled:cursor-not-allowed disabled:bg-golden-glow hover:bg-bisque ml-2"
+            type="button">
             <span class="material-symbols-rounded text-lg text-crater-brown">
               delete
             </span>
