--- a/src/app/components/card-menu/card-menu.component.html
+++ b/src/app/components/card-menu/card-menu.component.html
@@ -12,16 +12,16 @@
             {{description}}
         </p>
         <div class="flex flex-row space-x-2 mt-4">
-            @if(firtButtonText != "") {
+            @if(firstButtonText != "") {
             <button
-                [ngClass]="[firstButtonBackgroundColor, firstButtonTextColor, 'px-4 py-2 rounded-md font-bold text-lg']"
+                [ngClass]="[firstButtonBackgroundColor, firstButtonTextColor, firstButtonHoverTextColor, firstButtonHoverBgColor, 'px-4 py-2 rounded-md font-bold text-lg']"
                 [routerLink]="firstButtonRoute ? ['/app', firstButtonRoute] : null">
-                {{firtButtonText}}
+                {{firstButtonText}}
             </button>
             }
             @if(secondButtonText != "") {
             <button
-                [ngClass]="[secondButtonBackgroundColor, secondButtonTextColor, 'px-4 py-2 rounded-md font-bold text-lg']"
+                [ngClass]="[secondButtonBackgroundColor, secondButtonTextColor, secondButtonHoverTextColor, secondButtonHoverBgColor, 'px-4 py-2 rounded-md font-bold text-lg']"
                 [routerLink]="secondButtonRoute ? ['/app', secondButtonRoute] : null">
                 {{secondButtonText}}
             </button>
