--- a/src/app/components/manual-invoices/manual-invoices-form/manual-invoices-form.component.html
+++ b/src/app/components/manual-invoices/manual-invoices-form/manual-invoices-form.component.html
@@ -57,7 +57,7 @@
 
   <div>
     <div class="border-b-2 mb-4 border-zorba">
-      <h2 class="text-bisque font-bold">Datos del @if(type === "ingreso") {cliente} @else {proveedor}</h2>
+      <h2 class="text-bisque font-bold">Datos del @if(type() === "ingreso") {cliente} @else {proveedor}</h2>
     </div>
     <div class="flex gap-4 flex-wrap">
       <div class="flex flex-col gap-2 flex-1">
