--- a/src/app/pages/invoice/invoice.component.html
+++ b/src/app/pages/invoice/invoice.component.html
@@ -24,18 +24,18 @@
 <app-loader></app-loader>
 }
 
-<ng-template #addInvoiceModal>
-    <app-modal [hideFooter]="true">
-        <div>
-            <app-manual-invoices-form 
-            [invoiceForm]="invoiceForm" 
-            [detailForm]="detailForm" 
-            [details]="details" 
-            (callSaveMethod)="saveInvoice($event)"
-            (callUpdateMethod)="updateInvoice($event)" 
-            (callCancelMethod)="cancelUpdate()" 
-            [isEditing]="isEditing"
+@if (showEditInvoiceModal) {
+    <div class="fixed inset-0 flex justify-center items-start bg-black bg-opacity-30 overflow-y-auto pt-10 pb-5">
+        <div class="bg-crater-brown rounded-md p-6 shadow-lg mt-10 ml-44">
+            <app-manual-invoices-form
+                [invoiceForm]="invoiceForm"
+                [detailForm]="detailForm"
+                [details]="details"
+                (callSaveMethod)="saveInvoice($event)"
+                (callUpdateMethod)="updateInvoice($event)"
+                (callCancelMethod)="cancelUpdate()" 
+                [isEditing]="isEditing"
             />
         </div>
-    </app-modal>
-</ng-template>
+    </div>
+}
