Update currency symbol to '₡' in invoice details
Replaces the 'CRC' currency code with the '₡' symbol in the invoice detail component template for unit price, tax amount, and total columns to improve clarity and localization.

--- a/src/app/pages/invoice-detail/invoice-detail.component.html
+++ b/src/app/pages/invoice-detail/invoice-detail.component.html
@@ -88,12 +88,12 @@
                 <td class="p-2 text-crater-brown">{{item.category || 'N/A'}}</td>
                 <td class="p-2 text-crater-brown">{{item.cabys || 'N/A'}}</td>
                 <td class="p-2 text-right text-crater-brown">{{item.quantity || 0}}</td>
-                <td class="p-2 text-right text-crater-brown">{{item.unitPrice | currency: 'CRC ': 'symbol':'1.2-2'}}
+                <td class="p-2 text-right text-crater-brown">{{item.unitPrice | currency: '₡': 'symbol':'1.2-2'}}
                 </td>
                 <td class="p-2 text-right text-crater-brown">{{item.tax || 0 | number}}%</td>
-                <td class="p-2 text-right text-crater-brown">{{item.taxAmount | currency: 'CRC ': 'symbol':'1.2-2'}}
+                <td class="p-2 text-right text-crater-brown">{{item.taxAmount | currency: '₡': 'symbol':'1.2-2'}}
                 </td>
-                <td class="p-2 text-right text-crater-brown">{{item.total | currency: 'CRC ': 'symbol':'1.2-2'}}</td>
+                <td class="p-2 text-right text-crater-brown">{{item.total | currency: '₡': 'symbol':'1.2-2'}}</td>
             </tr>
             }
         </tbody>
