Update currency symbol for total taxes to '₡'
Changed the currency symbol in the invoice detail template from 'CRC' to '₡' for displaying total taxes, ensuring correct currency representation.

--- a/src/app/pages/invoice-detail/invoice-detail.component.html
+++ b/src/app/pages/invoice-detail/invoice-detail.component.html
@@ -107,8 +107,7 @@
             <tr class="font-bold">
                 <td colspan="7" class="p-2 text-right text-crater-brown">Total Impuestos:</td>
                 <td class="p-2 text-right text-crater-brown">{{calculateTotalTaxes(invoiceData?.details ?? []) |
-                    currency: 'CRC ':
-                    'symbol':'1.2-2'}}</td>
+                    currency: '₡': 'symbol':'1.2-2'}}</td>
                 <td></td>
             </tr>
             <tr class="font-bold border-t-2 border-crater-brown">
